--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,59 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* styles the Header upper section*/
+
+.header {
+  width: 100%;
+  height: 110px;
+  background-color: orange;
+}
+
+.header .upper-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding-top: 10px;
+  border-bottom-style: groove;
+  border-bottom-color: black;
+  border-bottom-width: 1px;
+}
+
+.search{
+  margin-top: 11px;
+  padding: 10px;
+  height: 20px;
+  width: 500px;
+  border-color: transparent;
+  border-bottom: black;
+}
+
+#search-button  {
+  padding-bottom: 10px;
+  padding-top: 10px;
+  width: 90px;
+  height: 46px;
+  margin-left: 0px;
+  border-color: transparent;
+  background-color: black;
+  color: white;
+  font-size: larger;
+}
+#search-button:hover{
+  color: orange;
+  background-color: white;
+  margin-left: 5px;
+}
+.lydo span {
+  color: white;
+}
+.lydo{
+  font-size: x-large;
+}
+
+/* styles the Header navigation section*/
+
+.navigation-buttons {
+  justify-content: space-evenly;
+}
