--- a/src/index.css
+++ b/src/index.css
@@ -135,3 +135,45 @@ img {
   height: auto;
   align-items: center;
 }
+
+/*
+Stye the intro image slider.
+
+*/
+
+.side-show-container{
+
+  overflow: hidden;
+  display: flex;
+}
+article {
+  transition: all 0.3s linear;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+}
+
+article.activeSlide{
+  opacity: 1;
+  transform: translateX(0);
+}
+article.lastSlide {
+  transform: translateX(-100%);
+}
+article.nextSlide {
+  transform: translateX(100%);
+}
+
+.slideImage {
+  width: 500px;
+  height: 310px;
+
+}
+
+.description-slider {
+  display: flex;
+  color: orange;
+  justify-content: space-evenly;
+}
