--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -9,7 +9,7 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -19,7 +19,7 @@ code {
   width: 100%;
   height: 110px;
   background-color: orange;
-  margin-bottom: 20px ;
+  margin-bottom: 20px;
 }
 
 .header .upper-section {
@@ -32,7 +32,7 @@ code {
   border-bottom-width: 1px;
 }
 
-.search{
+.search {
   margin-top: 11px;
   padding: 10px;
   height: 20px;
@@ -41,7 +41,7 @@ code {
   border-bottom: black;
 }
 
-#search-button  {
+#search-button {
   padding-bottom: 10px;
   padding-top: 10px;
   width: 90px;
@@ -52,13 +52,12 @@ code {
   color: white;
   font-size: larger;
 }
-#search-button:hover{
+#search-button:hover {
   color: orange;
   background-color: white;
   margin-left: 5px;
 }
 nav a {
-
   display: inline-block;
   width: 50px;
   padding: 6px;
@@ -71,14 +70,13 @@ nav a {
 .lydo span {
   color: white;
 }
-.lydo{
+.lydo {
   font-size: x-large;
 }
 
 img {
   justify-content: space-around;
   margin-left: 20px;
-
 }
 
 /* styles the Header navigation section*/
@@ -95,18 +93,19 @@ img {
 }
 
 /* comment-input form*/
-.comment-form{
+.comment-form {
   top: 50%;
   left: 50%;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-  transform: translate(-50%,50%);
+  transform: translate(-50%, 50%);
 
   align-items: center;
 }
 
-.comment-form input, .comment-form textarea {
+.comment-form input,
+.comment-form textarea {
   width: 100%;
   padding: 0 20px;
   border: 1px solid orange;
@@ -141,8 +140,7 @@ Stye the intro image slider.
 
 */
 
-.side-show-container{
-
+.side-show-container {
   overflow: hidden;
   display: flex;
 }
@@ -155,7 +153,7 @@ article {
   opacity: 0;
 }
 
-article.activeSlide{
+article.activeSlide {
   opacity: 1;
   transform: translateX(0);
 }
@@ -169,11 +167,69 @@ article.nextSlide {
 .slideImage {
   width: 500px;
   height: 310px;
-
 }
 
 .description-slider {
   display: flex;
   color: orange;
   justify-content: space-evenly;
+}
+
+/* Cart styles*/
+
+.item-in-cart {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 20px;
+  border-bottom: 1px solid rgb(245, 241, 241);
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.cart-image {
+  width: 100px;
+  height: 100px;
+}
+
+.cart-title {
+  width: 200px;
+  font-style: oblique;
+}
+
+.cart-price {
+  color: green;
+}
+
+.remove-button {
+  width: auto;
+  height: 50px;
+  padding: 10px;
+  border: 1px solid orange;
+  color: orange;
+  font-weight: 800;
+  font-size: larger;
+}
+
+.amount {
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  color: green;
+  display: flex-end;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: end;
+}
+.amount #amount-text {
+  color: black;
+}
+.cart-header-empty,
+.cart-header-filled {
+  text-align: center;
+  font-size: larger;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  border-bottom: 1px solid black;
 }
