--- a/src/index.css
+++ b/src/index.css
@@ -154,7 +154,7 @@ Stye the intro image slider.
   display: flex;
 }
 article {
-  transition: all 0.3s linear;
+  transition: all 0.5s linear;
   width: 100%;
   height: 100%;
   top: 0;
@@ -164,7 +164,7 @@ article {
 
 article.activeSlide {
   opacity: 1;
-  transform: translateX(1);
+  transform: translateX(0);
 }
 article.lastSlide {
   transform: translateX(-100%);
@@ -309,9 +309,62 @@ article.nextReviewSlide1 {
   height: 400px;
   width: 600px;
 
-  borderWidth: 1px;
-  marginLeft: 20px;
-  marginRight: 20px;
+  border-width: 1px;
+  margin-left: 20px;
+  margin-right: 20px;
  }
 
 
+
+
+ .slider {
+  width: 100%;
+  height: 90vh;
+  position: relative;
+  overflow: hidden;
+}
+
+.slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 400px;
+  opacity: 0;
+  transform: translateX(-50%);
+  transition: all 0.5s ease;
+}
+
+.slide img {
+   width: 500px;
+  height: 330px;
+}
+
+
+
+.current {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.content {
+  position: absolute;
+  display: flex;
+  opacity: 0;
+  width: 90%;
+  font-style: oblique;
+  color: orange;
+  animation: slide-up 1s ease 0.5s;
+   animation-delay: 1s;
+  animation-fill-mode: forwards;
+}
+.content-title {
+  color: black;
+  font-size: x-large;
+}
+
+.current .content {
+  opacity: 1;
+  transform: translateX(0);
+  transition: all 0.5s ease;
+}
