--- a/src/index.css
+++ b/src/index.css
@@ -396,3 +396,23 @@ margin-right: auto;
 height: 40px;
 margin-bottom: 40px;
 }
+
+.cart-header-empty {
+  min-height: 2px;
+}
+
+.about, .welcome-happy {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  align-content: center;
+}
+em {
+  font-stretch: semi-expanded;
+  font-weight: 600;
+  width: 80%;
+}
+
+.welcome-happy {
+  margin-left: 20%;
+}
