--- a/src/index.css
+++ b/src/index.css
@@ -416,3 +416,25 @@ em {
 .welcome-happy {
   margin-left: 20%;
 }
+
+.product-image-details {
+  width: 300px;
+  height: 480px;
+}
+
+.details-buttons,.details {
+  color: orange;
+  padding-left: 20px;
+  padding-right: 20px;
+  border: 1px solid orange;
+  height: 30px;
+  background-color: white;
+  font-size: large;
+}
+.details-buttons :hover {
+  background-color: rgb(255, 115, 0);
+  color: white;
+}
+.product-details {
+  color: rgb(255, 115, 0);
+}
