--- a/src/index.css
+++ b/src/index.css
@@ -84,7 +84,7 @@ img {
 
 .navigation-buttons {
   justify-content: space-evenly;
-  padding-left: 170px;
+  padding-left: 80px;
 }
 
 /* introduction to styling*/
@@ -441,4 +441,45 @@ em {
 }
 .product-details {
   color: rgb(255, 115, 0);
+}
+
+.instructions {
+  font-size: 0.75rem;
+  border-radius: 0.5rem;
+  background: #000;
+  color: #fff;
+  padding: 0.25rem;
+  position: relative;
+  bottom: -10px;
+}
+
+.instructions > svg {
+  margin-right: 0.25rem;
+}
+
+.offscreen {
+  position: absolute;
+  left: -9999px;
+}
+
+.hide {
+  display: none;
+}
+
+.valid {
+  color: limegreen;
+  margin-left: 0.25rem;
+}
+
+.invalid {
+  color: red;
+  margin-left: 0.25rem;
+}
+
+.errmsg {
+  background-color: lightpink;
+  color: firebrick;
+  font-weight: bold;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
 }
